--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.5.3",
     "react": "^16.4.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.4.0",
     "react-scripts": "1.1.4",
     "redux": "^4.0.5"
