--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.5.0",
+    "bootstrap": "^4.5.3",
     "react": "^16.4.0",
+    "react-bootstrap": "^1.4.0",
     "react-dom": "^16.4.0",
+    "react-redux": "^7.2.2",
     "react-scripts": "1.1.4",
     "redux": "^4.0.5"
   },
